Serve all 4 microservices

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,13 @@
     <div id="description"></div>
     <div id="about-modal"></div>
     <div id="location"></div>
+    <div id="review"></div>
     <div id="explore"></div>
   </body>
-  <!-- <script type="text/javascript" src="http://localhost:2001/bundle.js"></script> -->
-
+  <script
+    type="text/javascript"
+    src="http://localhost:2001/public/bundle.js"
+  ></script>
   <script
     type="text/javascript"
     src="http://localhost:4000/public/bundle.js"
@@ -26,5 +29,5 @@
     type="text/javascript"
     src="http://localhost:5000/public/bundle.js"
   ></script>
-  <!-- <script type="text/javascript" src="http://localhost:8080/bundle.js"></script> -->
+  <script type="text/javascript" src="http://localhost:8080/bundle.js"></script>
 </html>
