Add div tag for Andy's modal

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <div id="description-modal-root"></div>
     <div id="description"></div>
     <div id="about-modal"></div>
+    <div id="reviewmodal-root"></div>
     <div id="location"></div>
     <div id="review"></div>
     <div id="explore"></div>
