Add div tag for disjointed widget in description service

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <div id="reviewmodal-root"></div>
     <div id="location"></div>
     <div id="review"></div>
+    <div id="things-to-do-carousel"></div>
+
     <div id="explore"></div>
   </body>
   <script
