--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <div id="reviewmodal-root"></div>
     <div id="location"></div>
     <div id="review"></div>
+    <!-- Added tag -->
     <div id="things-to-do-carousel"></div>
 
     <div id="explore"></div>
