Add script tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,63 @@
   </head>
 
   <body style="overflow-x: hidden;">
-    <h1>Description</h1>
-    <div id="location"></div>
-    <div id="reservation"></div>
-    <div id="description-modal-root"></div>
+    <div id="photos"></div>
     <div id="description"></div>
-    <div id="about-modal"></div>
-    <div id="reviewmodal-root"></div>
+    <div id="reservation"></div>
     <div id="location"></div>
+    <div id="host"></div>
+    <div id="thingsToKnow"></div>
     <div id="review"></div>
+    <div id="reviewmodal-root"></div>
+    <div id="suggestions"></div>
+    <div id="things-to-do-carousel"></div>
     <div id="explore"></div>
+    <div id="description-modal-root"></div>
+    <div id="photo-modal"></div>
+    <div id="about-modal"></div>
   </body>
+  <!-- Photos -->
   <script
     type="text/javascript"
-    src="http://localhost:2001/public/bundle.js"
+    src="http://52.14.166.9:3001/public/bundle.js"
   ></script>
+  <!-- Description -->
+  <script>
+    type = 'text/javascript';
+    src = 'http://52.14.166.9:4000/public/bundle.js';
+  </script>
+  <!-- Reservation -->
   <script
+    type="text/javascript"
+    src="http://3.19.16.18/public/bundle.js"
+  ></script>
+  <!-- Location -->
+  <scirpt
+    type="text/javascript"
+    src="http://3.12.169.208:2001/public/bundle.js"
+  ></scirpt>
+  <!-- Host -->
+  <script
+    type="text/javascript"
+    src="http://3.12.169.208:2000/public/bundle.js"
+  ></script>
+  <!-- Reviews -->
+  <script>
+    type = 'text/javascript';
+    src =
+      'http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8080/public/bundle.js';
+  </script>
+  <!-- Suggestions -->
+  <script>
+    type = 'text/javascript';
+    src =
+      'http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8081/public/bundle.js';
+  </script>
+  <!-- <script
+    type="text/javascript"
+    src="http://localhost:2001/public/bundle.js"
+  ></script> -->
+  <!-- <script
     type="text/javascript"
     src="http://localhost:4000/public/bundle.js"
   ></script>
@@ -30,5 +71,5 @@
     type="text/javascript"
     src="http://localhost:5000/public/bundle.js"
   ></script>
-  <script type="text/javascript" src="http://localhost:8080/bundle.js"></script>
+  <script type="text/javascript" src="http://localhost:8080/bundle.js"></script> -->
 </html>
