Fix script tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
 
-  <body style="overflow-x: hidden;">
+  <body>
     <div id="photos"></div>
     <div id="description"></div>
     <div id="reservation"></div>
@@ -29,8 +29,8 @@
   ></script>
   <!-- Description -->
   <script>
-    type = 'text/javascript';
-    src = 'http://52.14.166.9:4000/public/bundle.js';
+    type="text/javascript"
+    src="http://52.14.166.9:4000/public/bundle.js"
   </script>
   <!-- Reservation -->
   <script
@@ -49,15 +49,13 @@
   ></script>
   <!-- Reviews -->
   <script>
-    type = 'text/javascript';
-    src =
-      'http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8080/public/bundle.js';
+    type="text/javascript"
+    src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8080/public/bundle.js"
   </script>
   <!-- Suggestions -->
   <script>
-    type = 'text/javascript';
-    src =
-      'http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8081/public/bundle.js';
+    type="text/javascript"
+    src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8081/public/bundle.js"
   </script>
   <!-- <script
     type="text/javascript"
