Fix script tags to render all bundles

--- a/public/index.html
+++ b/public/index.html
@@ -28,35 +28,23 @@
     src="http://52.14.166.9:3001/public/bundle.js"
   ></script>
   <!-- Description -->
-  <script>
-    type="text/javascript"
-    src="http://52.14.166.9:4000/public/bundle.js"
-  </script>
-  <!-- Reservation -->
   <script
     type="text/javascript"
-    src="http://3.19.16.18/public/bundle.js"
-  ></script>
+    src="http://52.14.166.9:4000/public/bundle.js"></script>
+
+  <!-- Reservation -->
+  <script type="text/javascript" src="http://3.19.16.18/public/bundle.js" ></script>
   <!-- Location -->
-  <scirpt
-    type="text/javascript"
-    src="http://3.12.169.208:2001/public/bundle.js"
+  <scirpt type="text/javascript" src="http://3.12.169.208:2001/public/bundle.js"
   ></scirpt>
   <!-- Host -->
-  <script
-    type="text/javascript"
-    src="http://3.12.169.208:2000/public/bundle.js"
+  <script type="text/javascript" src="http://3.12.169.208:2000/public/bundle.js"
   ></script>
   <!-- Reviews -->
-  <script>
-    type="text/javascript"
-    src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8080/public/bundle.js"
-  </script>
+  <script type="text/javascript" src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8080/public/bundle.js"></script>
   <!-- Suggestions -->
-  <script>
-    type="text/javascript"
-    src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8081/public/bundle.js"
-  </script>
+  <script type="text/javascript" src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8081/public/bundle.js"></script>
+
   <!-- <script
     type="text/javascript"
     src="http://localhost:2001/public/bundle.js"
