Elasticize source tags

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
   <script type="text/javascript" src="http://3.12.169.208:2000/public/bundle.js"
   ></script>
   <!-- Reviews -->
-  <script type="text/javascript" src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8080/public/bundle.js"></script>
+  <script type="text/javascript" src="http://52.14.214.44:8080/public/bundle.js"></script>
   <!-- Suggestions -->
-  <script type="text/javascript" src="http://ec2-3-129-14-177.us-east-2.compute.amazonaws.com:8081/public/bundle.js"></script>
+  <script type="text/javascript" src="http://52.14.214.44:8081/public/bundle.js"></script>
 
   <!-- <script
     type="text/javascript"
