--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <!-- Reservation -->
   <script type="text/javascript" src="http://3.19.16.18/public/bundle.js" ></script>
   <!-- Location -->
-  <scirpt type="text/javascript" src="http://3.12.169.208:2001/public/bundle.js"
+  <!-- <scirpt type="text/javascript" src="http://3.12.169.208:2001/public/bundle.js" -->
   ></scirpt>
   <!-- Host -->
   <script type="text/javascript" src="http://3.12.169.208:2000/public/bundle.js"
